--- a/Modules/Products/CeyenneNxt.Products.Module/CeyenneNxt.Products.Module.csproj
+++ b/Modules/Products/CeyenneNxt.Products.Module/CeyenneNxt.Products.Module.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FluentMigrator, Version=1.6.2.0, Culture=neutral, PublicKeyToken=aacfc7de5acabf05, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\FluentMigrator.1.6.2\lib\40\FluentMigrator.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -112,6 +116,7 @@
   <ItemGroup>
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Bindings.cs" />
+    <Compile Include="Migrations\Initial_ProductModule.cs" />
     <Compile Include="Modules\ProductModule.cs" />
     <Compile Include="ProductModuleSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
